--- a/client/src/components/Dice/index.scss
+++ b/client/src/components/Dice/index.scss
@@ -1,7 +1,7 @@
 :root {
   --dice-size: 3.125rem;
-  --dot-size: 0.625rem;
-  --side-spacing: 1.5rem;
+  --dot-size: 0.6rem;
+  --side-spacing: 1.55rem;
 }
 
 .dice {
@@ -24,15 +24,15 @@
 
 .side {
   position: absolute;
-  background-color: #33067a;
+  background-color: #18c964;
   border-radius: .5rem;
   width: var(--dice-size);
   height: var(--dice-size);
-  border: 1px solid #858585;
+  border: 1px solid #ffffff;
   text-align: center;
-  -webkit-box-shadow: 0px 0px 15px 0px rgba(71, 5, 185, 0.55);
-  -moz-box-shadow: 0px 0px 15px 0px rgba(71, 5, 185, 0.55);
-  box-shadow: 0px 0px 15px 0px rgba(71, 5, 185, 0.55);
+  -webkit-box-shadow: 0px 0px 15px 0px rgb(24, 201, 100, 0.55);
+  -moz-box-shadow: 0px 0px 15px 0px rgb(24, 201, 100, 0.55);
+  box-shadow: 0px 0px 15px 0px rgb(24, 201, 100, 0.55);
 }
 
 .side:nth-child(1) {
