--- a/client/src/panels/more-7-less/styles.module.scss
+++ b/client/src/panels/more-7-less/styles.module.scss
@@ -1,7 +1,7 @@
 .main {
   display: flex;
   flex-direction: column;
-  row-gap: 1rem;
+  row-gap: .8rem;
   height: calc(100vh - var(--vkui--size_panel_header_height--regular) - var(--vkui_internal--tabbar_height));
   padding: 1rem;
 }
@@ -12,6 +12,7 @@
 }
 
 .input_bet {
+  animation: .5s show ease;
   input {
     flex-grow: 2;
   }
@@ -21,6 +22,7 @@
 }
 
 .bet_buttons {
+  animation: .5s show ease;
   display: flex;
   justify-content: space-between;
   column-gap: .5rem;
@@ -31,8 +33,9 @@
 }
 
 .circular{
+  animation: .5s show ease;
   svg {
-    height: 10em;
+    height: 20vh;
     width: 100%;
   }
 
@@ -52,6 +55,9 @@
 .card {
   height: 100%;
   width: 100%;
+  min-height: 23vh;
+  box-shadow: none;
+  background-color: #27272a;
 }
 
 button {
@@ -70,14 +76,111 @@ button {
   flex-direction: column;
   align-items: flex-start;
   row-gap: .5rem;
+
+  .bet {
+    padding: .7rem 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #27272a;
+    border-radius: 10px;
+    animation: .5s show ease;
+
+    .chip {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 2rem;
+      width: 2rem;
+      border-radius: 50%;
+
+      span {
+        margin-bottom: 4px;
+        line-height: 1rem;
+        font-size: 1rem;
+      }
+    }
+  }
 }
 
 .dices {
   display: flex;
   column-gap: 5rem;
+  animation: .5s show ease;
 }
 
 h1 {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 600;
+  animation: .5s show ease;
+}
+
+h2 {
+  font-size: 1.05rem;
+  font-weight: 600;
+  animation: .5s show ease;
+}
+
+.more {
+  border: 2px solid #f31260;
+}
+
+.less {
+  border: 2px solid #0070f0;
+}
+
+.equal {
+  border: 2px solid #18c964;
+}
+
+.history {
+  display: flex;
+  height: 100%;
+  column-gap: 1rem;
+  max-width: 100%;
+  align-items: center;
+  padding: 0 .5rem;
+
+  div {
+    min-width: 2.5rem;
+    min-height: 2.5rem;
+    white-space: nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    animation: .5s show ease;
+  }
+}
+
+.scroll_history {
+  display: flex;
+  align-items: center;
+  min-height: 3.5rem;
+  background-color: #27272a;
+  border-radius: 10px;
+}
+
+.skeleton_history {
+  min-height: 3.5rem;
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+.check_game {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+
+  span {
+    font-size: .8rem;
+    opacity: .5;
+  }
+}
+
+@keyframes show {
+  from { opacity: 0; }
+  to { opacity: 1; }
 }
